java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHintDoNotPropose-hints.pass
Create method undefined() in org.netbeans.test.java.hints.AddCastDoNotPropose
